--- a/assetto-server-linux-x64/cfg/server_cfg.ini
+++ b/assetto-server-linux-x64/cfg/server_cfg.ini
@@ -4,48 +4,84 @@ CARS=formula_K
 TRACK=spa
 CONFIG_TRACK=2022
 MAX_CLIENTS=8
-RACE_OVER_TIME=300
-ALLOWED_TYRES_OUT=4
-UDP_PORT=9000
-TCP_PORT=9001
-HTTP_PORT=9002
+RACE_OVER_TIME=20
+ALLOWED_TYRES_OUT=-1
+UDP_PORT=9600
+TCP_PORT=9600
+HTTP_PORT=8081
 PASSWORD=
-LOOP_MODE=0
+LOOP_MODE=1
 REGISTER_TO_LOBBY=0
-PICKUP_MODE_ENABLED=0
-SLEEP_TIME=0
-VOTING_QUORUM=50
-VOTE_DURATION=30
+PICKUP_MODE_ENABLED=1
+SLEEP_TIME=1
+VOTING_QUORUM=75
+VOTE_DURATION=20
 BLACKLIST_MODE=0
-TC_ALLOWED=2
-ABS_ALLOWED=2
-STABILITY_ALLOWED=1
+TC_ALLOWED=1
+ABS_ALLOWED=1
+STABILITY_ALLOWED=0
 AUTOCLUTCH_ALLOWED=1
-DAMAGE_MULTIPLIER=50
+DAMAGE_MULTIPLIER=0
 FUEL_RATE=100
 TYRE_WEAR_RATE=100
-CLIENT_SEND_INTERVAL_HZ=10
+CLIENT_SEND_INTERVAL_HZ=15
 TYRE_BLANKETS_ALLOWED=1
-ADMIN_PASSWORD=admin1234
+
+ADMIN_PASSWORD=kunos1234
 QUALIFY_MAX_WAIT_PERC=120
 WELCOME_MESSAGE=
+
 START_RULE=0
-NUM_THREADS=2
+NUM_THREADS=4
+
 FORCE_VIRTUAL_MIRROR=1
-LEGAL_TYRES=soft,medium,hard
-MAX_BALLAST_KG=100
-UDP_PLUGIN_LOCAL_PORT=0
-UDP_PLUGIN_ADDRESS=
+LEGAL_TYRES=V;E;HR;ST
+MAX_BALLAST_KG=50
+UDP_PLUGIN_LOCAL_PORT=5000
+UDP_PLUGIN_ADDRESS=127.0.0.1
 AUTH_PLUGIN_ADDRESS=
+RACE_GAS_PENALTY_DISABLED=0
+RESULT_SCREEN_TIME=10
+RACE_EXTRA_LAP=0
+
+LOCKED_ENTRY_LIST=0
+RACE_PIT_WINDOW_START=25
+RACE_PIT_WINDOW_END=35
+REVERSED_GRID_RACE_POSITIONS=8
+
+TIME_OF_DAY_MULT=1
+
+[DYNAMIC_TRACK]
+SESSION_START=90
+RANDOMNESS=1
+LAP_GAIN=1
+SESSION_TRANSFER=90
 
 [PRACTICE]
-NAME=Practice
-TIME=60
+NAME=Free Practice
+TIME=0
 IS_OPEN=1
+
+[QUALIFY]
+NAME=Qualify
+TIME=15
+IS_OPEN=1
+
+[RACE]
+NAME=Race
+LAPS=5
+TIME=0
+WAIT_TIME=60
+IS_OPEN=2
 
 [WEATHER_0]
 GRAPHICS=clear
-BASE_TEMPERATURE_AMBIENT=20
-VARIATION_AMBIENT=0
-BASE_TEMPERATURE_ROAD=20
-VARIATION_ROAD=0
+BASE_TEMPERATURE_AMBIENT=18
+VARIATION_AMBIENT=2
+BASE_TEMPERATURE_ROAD=6
+VARIATION_ROAD=1
+
+WIND_BASE_SPEED_MIN=3
+WIND_BASE_SPEED_MAX=15
+WIND_BASE_DIRECTION=30
+WIND_VARIATION_DIRECTION=15
