--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,17 +1,27 @@
 [package]
-name = "client"
-version = "0.1.0"
+name = "web"
+version = "0.2.0"
+authors = ["wallago <45556867+wallago@users.noreply.github.com>"]
 edition = "2024"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-anyhow = "1.0.98"
-bincode = { version = "2.0.1", features = ["serde"] }
-byteorder = "1.5.0"
-dialoguer = "0.11.0"
-git2 = "0.20.2"
+chrono = { version = "0.4.41", features = ["serde"] }
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.140"
-tempfile = "3.19.1"
-tokio = "1.47.1"
+wasm-bindgen = "0.2.100"
+wasm-bindgen-futures = "0.4.50"
+web-sys = { version = "0.3.77", features = ["DomTokenList", "Storage"] }
+regex = "1.11.1"
+dioxus = { version = "0.7.0-rc.0", features = ["router", "web"] }
+dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+reqwest-websocket = "0.5.1"
+reqwest = "0.12.23"
+futures-util = "0.3.31"
+tokio = "1.47.1"
+gloo-timers = "0.3.0"
+
+[features]
+default = ["web"]
+web = ["dioxus/web"]
