--- a/swb/ffb/Cargo.toml
+++ b/swb/ffb/Cargo.toml
@@ -13,4 +13,9 @@ features = [
   "Win32_Security",
   "Win32_System_Threading",
   "Win32_UI_WindowsAndMessaging",
+  "Win32_System_Com",
+  "Win32_System_Console",
+  "Win32_UI_Input",
+  "Win32_Devices_HumanInterfaceDevice",
+  "Win32_System_LibraryLoader",
 ]
