--- a/swb/ffb/Cargo.toml
+++ b/swb/ffb/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+lazy_static = "1.5.0"
+winapi = { version = "0.3.9", features = ["dinput"] }
 
 [dependencies.windows]
 version = "0.62"
@@ -13,9 +15,10 @@ features = [
   "Win32_Security",
   "Win32_System_Threading",
   "Win32_UI_WindowsAndMessaging",
+  "Win32_UI_Input_KeyboardAndMouse",
   "Win32_System_Com",
-  "Win32_System_Console",
   "Win32_UI_Input",
   "Win32_Devices_HumanInterfaceDevice",
   "Win32_System_LibraryLoader",
+  "Win32_Graphics_Gdi",
 ]
