--- a/swb/ffb/Cargo.toml
+++ b/swb/ffb/Cargo.toml
@@ -13,6 +13,7 @@ version = "0.62"
 features = [
   "Data_Xml_Dom",
   "Win32_Security",
+  "Win32_System_Memory",
   "Win32_System_Threading",
   "Win32_UI_WindowsAndMessaging",
   "Win32_UI_Input_KeyboardAndMouse",
