--- a/swb/ffb/Cargo.toml
+++ b/swb/ffb/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 lazy_static = "1.5.0"
+rand = "0.9.2"
 winapi = { version = "0.3.9", features = ["dinput"] }
 
 [dependencies.windows]
