--- a/sbw/law/Cargo.toml
+++ b/sbw/law/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+dotenvy = "0.15.7"
 lazy_static = "1.5.0"
 rand = "0.9.2"
 vjoy-sys = "0.4.1"
