--- a/sbw/law/Cargo.toml
+++ b/sbw/law/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 dotenvy = "0.15.7"
+image = "0.25.8"
 lazy_static = "1.5.0"
+plotters = "0.3.7"
 rand = "0.9.2"
 vjoy-sys = "0.4.1"
 winapi = { version = "0.3.9", features = ["dinput"] }
